--- a/test/box/custom_box_defaultpoints1.yaml
+++ b/test/box/custom_box_defaultpoints1.yaml
@@ -174,8 +174,8 @@ ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
 
-stat_input: ./box.data
-plot_filename: ./box_defaultpoints1.png
+stat_input: !ENV '${TEST_DIR}/box.data'
+plot_filename: !ENV '${TEST_DIR}/box_defaultpoints1.png'
 show_legend:
   -True
   -True
