--- a/test/eclv/custom_eclv.yaml
+++ b/test/eclv/custom_eclv.yaml
@@ -112,8 +112,8 @@ ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
 
-stat_input: ./eclv.data
-plot_filename: ./eclv.png
+stat_input: !ENV '${TEST_DIR}/eclv.data'
+plot_filename: !ENV '${TEST_DIR}/eclv.png'
 
 # To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
 # permissions to the directory you specify.  The default, as specified in the default config file is stdout.
