--- a/test/eclv/custom_eclv_ctc.yaml
+++ b/test/eclv/custom_eclv_ctc.yaml
@@ -111,8 +111,8 @@ ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
 
-stat_input: ./eclv_ctc.data
-plot_filename: ./eclv_ctc.png
+stat_input: !ENV '${TEST_DIR}/eclv_ctc.data'
+plot_filename: !ENV '${TEST_DIR}/eclv_ctc.png'
 
 show_legend:
   -True
