--- a/test/line/custom_line2.yaml
+++ b/test/line/custom_line2.yaml
@@ -95,14 +95,14 @@ plot_disp:
 - 'True'
 - 'True'
 - 'True'
-plot_filename: ./line.png
+plot_filename: !ENV '${TEST_DIR}/line.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
 plot_type: png16m
 plot_units: in
 plot_width: 11.0
-points_path: ./intermed_files
+points_path: !ENV '${TEST_DIR}/intermed_files'
 random_seed: null
 series_line_style:
 - '-'
@@ -149,7 +149,7 @@ show_signif:
 - 'False'
 - 'False'
 - 'False'
-stat_input: ./line.data
+stat_input: !ENV '${TEST_DIR}/line.data'
 sync_yaxes: 'False'
 title: test title
 title_align: 0.5
