--- a/test/line/fbias_fixed_vars_vals.yaml
+++ b/test/line/fbias_fixed_vars_vals.yaml
@@ -166,7 +166,7 @@ plot_ci:
 plot_disp:
 - 'True'
 - 'True'
-plot_filename:  ./fbias_fixed_vars.png
+plot_filename: !ENV '${TEST_DIR}/fbias_fixed_vars.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: mean
@@ -180,7 +180,7 @@ start_from_zero: True
 # that is used by METviewer (created when dump_points_1 is set to True)
 # if dump_points_1 is True and this is uncommented, the points1 file
 # will be saved in the default location (i.e. where the input data file is stored).
-points_path: ./
+points_path: !ENV '${TEST_DIR}/'
 
 random_seed: null
 series_line_style:
@@ -207,7 +207,7 @@ show_nstats: 'False'
 show_signif:
 - 'False'
 - 'False'
-stat_input: ./fbias_data.txt
+stat_input: !ENV '${TEST_DIR}/fbias_data.txt'
 sync_yaxes: 'False'
 title: "Fixed variable fcst_thresh >0.0 for FBIAS"
 title_align: 0.5
