--- a/test/reliability_diagram/custom_reliability_use_defaults.yaml
+++ b/test/reliability_diagram/custom_reliability_use_defaults.yaml
@@ -179,8 +179,8 @@ ytlab_horiz: 0.5
 ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
-plot_filename: ./reliability.png
-stat_input: ./reliability.data
+plot_filename: !ENV '${TEST_DIR}/reliability.png'
+stat_input: !ENV '${TEST_DIR}/reliability.data'
 show_legend:
 - 'True'
 - 'True'
