--- a/test/roc_diagram/CTC_ROC_ee.yaml
+++ b/test/roc_diagram/CTC_ROC_ee.yaml
@@ -62,7 +62,7 @@ plot_ci:
   - none
 plot_disp:
   - 'True'
-plot_filename: ./CTC_ROC_ee.png
+plot_filename: !ENV '${TEST_DIR}/CTC_ROC_ee.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
@@ -88,7 +88,7 @@ series_val_2: {}
 show_nstats: 'False'
 show_signif:
   - 'False'
-stat_input: CTC_ROC.data
+stat_input: !ENV '${TEST_DIR}/CTC_ROC.data'
 sync_yaxes: 'False'
 title: test title
 title_align: 0.5
