--- a/test/roc_diagram/CTC_ROC_thresh_dump_pts.yaml
+++ b/test/roc_diagram/CTC_ROC_thresh_dump_pts.yaml
@@ -64,14 +64,14 @@ plot_ci:
   - none
 plot_disp:
   - 'True'
-plot_filename: ./CTC_ROC_thresh_dump_pts.png
+plot_filename: !ENV '${TEST_DIR}/CTC_ROC_thresh_dump_pts.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
 plot_type: png16m
 plot_units: in
 plot_width: 11.0
-points_path: './intermed_files'
+points_path: !ENV '${TEST_DIR}/intermed_files'
 random_seed: null
 reverse_connection_order: 'True'
 roc_ctc: true
@@ -91,7 +91,7 @@ series_val_2: {}
 show_nstats: 'False'
 show_signif:
   - 'False'
-stat_input: CTC_ROC_thresh.data
+stat_input: !ENV '${TEST_DIR}/CTC_ROC_thresh.data'
 sync_yaxes: 'False'
 title: test title
 title_align: 0.5
