--- a/test/skew_t/test_skew_t.yaml
+++ b/test/skew_t/test_skew_t.yaml
@@ -4,11 +4,11 @@
 
 
 # Input and output file information
-input_directory: './data/2023/'
+input_directory: !ENV '${TEST_DIR}/data/2023/'
 input_file_extension: '.dat'
-output_directory:  ./output
+output_directory: !ENV '${TEST_DIR}/output'
 log_level: "INFO"
-log_directory: ./logs
+log_directory: !ENV '${TEST_DIR}/logs'
 log_filename: 'tc_diags_skewt.log'
 
 # Sounding hours of interest. If all_sounding_hours is set to False, then the
