--- a/test/bar/custom_bar.yaml
+++ b/test/bar/custom_bar.yaml
@@ -135,8 +135,8 @@ ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
 
-stat_input: ./bar.data
-plot_filename: ./bar.png
+stat_input: !ENV '${TEST_DIR}/bar.data'
+plot_filename: !ENV '${TEST_DIR}/bar.png'
 
 # To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
 # permissions to the directory you specify.  The default, as specified in the default config file is stdout.
