--- a/test/bar/custom_defaultpoints1_bar.yaml
+++ b/test/bar/custom_defaultpoints1_bar.yaml
@@ -130,8 +130,8 @@ ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
 
-stat_input: ./bar.data
-plot_filename: ./bar_defaultpoints1.png
+stat_input: !ENV '${TEST_DIR}/bar.data'
+plot_filename: !ENV '${TEST_DIR}/bar_defaultpoints1.png'
 show_legend:
   -True
   -True
