--- a/test/box/simple_box.yaml
+++ b/test/box/simple_box.yaml
@@ -112,8 +112,8 @@ title: Simple Example-Box
 xaxis: FCST_LEAD
 xaxis_reverse: 'False'
 
-stat_input: ./box.data
-plot_filename: ./default_box.png
+stat_input: !ENV '${TEST_DIR}/box.data'
+plot_filename: !ENV '${TEST_DIR}/default_box.png'
 
 show_legend:
   -True
