--- a/test/equivalence_testing_bounds/custom_equivalence_testing_bounds2.yaml
+++ b/test/equivalence_testing_bounds/custom_equivalence_testing_bounds2.yaml
@@ -83,7 +83,7 @@ plot_stat: median
 plot_type: png16m
 plot_units: in
 plot_width: 11.0
-points_path: ./intermed_files
+points_path: !ENV '${TEST_DIR}/intermed_files'
 random_seed: null
 series_line_style:
 - '-'
@@ -164,8 +164,8 @@ ytlab_horiz: 0.5
 ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
-plot_filename: ./intermed_files/equivalence_testing_bounds.png
-stat_input: ./equivalence_testing_bounds.data
+plot_filename: !ENV '${TEST_DIR}/intermed_files/equivalence_testing_bounds.png'
+stat_input: !ENV '${TEST_DIR}/equivalence_testing_bounds.data'
 show_legend:
 - 'True'
 - 'True'
