--- a/test/line/custom_line.yaml
+++ b/test/line/custom_line.yaml
@@ -94,7 +94,7 @@ plot_disp:
 - 'True'
 - 'True'
 - 'True'
-plot_filename: ./line.png
+plot_filename: !ENV '${TEST_DIR}/line.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
@@ -153,7 +153,7 @@ show_signif:
 - 'False'
 - 'False'
 - 'False'
-stat_input: ./line.data
+stat_input: !ENV '${TEST_DIR}/line.data'
 sync_yaxes: 'False'
 title: test title
 title_align: 0.5
