--- a/test/performance_diagram/custom_performance_diagram.yaml
+++ b/test/performance_diagram/custom_performance_diagram.yaml
@@ -104,8 +104,8 @@ series_line_style:
   - "--"
   # dotted line
   - ":"
-stat_input:  ./plot_20200317_151252.data
-plot_filename: ./performance_diagram_actual.png
+stat_input: !ENV '${TEST_DIR}/plot_20200317_151252.data'
+plot_filename: !ENV '${TEST_DIR}/performance_diagram_actual.png'
 event_equal: False
 
 # To save your log output to a file, specify a path and filename and uncomment the line below.  Make sure you have
