--- a/test/reliability_diagram/custom_reliability_diagram.yaml
+++ b/test/reliability_diagram/custom_reliability_diagram.yaml
@@ -81,7 +81,7 @@ plot_ci:
 - none
 plot_disp:
 - 'True'
-plot_filename: ./custom_reliability_diagram.png
+plot_filename: !ENV '${TEST_DIR}/custom_reliability_diagram.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
@@ -111,7 +111,7 @@ series_val_2: {}
 show_nstats: 'False'
 show_signif:
 - 'False'
-stat_input: ./plot_20210311_145053.data
+stat_input: !ENV '${TEST_DIR}/plot_20210311_145053.data'
 summary_curves: []
 sync_yaxes: 'False'
 title: test title
