--- a/test/reliability_diagram/custom_reliability_points1.yaml
+++ b/test/reliability_diagram/custom_reliability_points1.yaml
@@ -96,7 +96,7 @@ plot_stat: median
 plot_type: png16m
 plot_units: in
 plot_width: 11.0
-points_path: ./intermed_files
+points_path: !ENV '${TEST_DIR}/intermed_files'
 random_seed: null
 rely_event_hist: 'True'
 series_line_style:
@@ -180,8 +180,8 @@ ytlab_horiz: 0.5
 ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
-plot_filename: ./intermed_files/reliability.png
-stat_input: ./reliability.data
+plot_filename: !ENV '${TEST_DIR}/intermed_files/reliability.png'
+stat_input: !ENV '${TEST_DIR}/reliability.data'
 noskill_line_col: 'green'
 reference_line_col: 'blue'
 show_legend:
