--- a/test/revision_series/custom2_revision_series.yaml
+++ b/test/revision_series/custom2_revision_series.yaml
@@ -69,7 +69,7 @@ plot_caption: ''
 plot_disp:
 - 'True'
 - 'True'
-plot_filename: ./intermed_files/revision_series.png
+plot_filename: !ENV '${TEST_DIR}/intermed_files/revision_series.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
@@ -95,7 +95,7 @@ series_val_1:
   - NoahMPv3.5.1_d01
 
 start_from_zero: 'False'
-stat_input: ./revision_series.data
+stat_input: !ENV '${TEST_DIR}/revision_series.data'
 title: Revision series
 title_align: 0.5
 title_offset: -2
@@ -125,7 +125,7 @@ ytlab_horiz: 0.5
 ytlab_orient: 1
 ytlab_perp: 0.5
 ytlab_size: 1
-points_path: ./intermed_files
+points_path: !ENV '${TEST_DIR}/intermed_files'
 show_legend:
 - 'True'
 - 'True'
