--- a/test/roc_diagram/PCT_ROC.yaml
+++ b/test/roc_diagram/PCT_ROC.yaml
@@ -62,7 +62,7 @@ plot_ci:
   - none
 plot_disp:
   - 'True'
-plot_filename: ./PCT_ROC.png
+plot_filename: !ENV '${TEST_DIR}/PCT_ROC.png'
 plot_height: 8.5
 plot_res: 72
 plot_stat: median
@@ -88,7 +88,7 @@ series_val_2: {}
 show_nstats: 'False'
 show_signif:
   - 'False'
-stat_input: PCT_ROC.data
+stat_input: !ENV '${TEST_DIR}/PCT_ROC.data'
 sync_yaxes: 'False'
 title: test title PCT ROC data
 
