--- a/test/roc_diagram/test_roc_diagram.yaml
+++ b/test/roc_diagram/test_roc_diagram.yaml
@@ -92,6 +92,6 @@ caption_align: .1 #0 # axis parallel location adjustment
 # Make the plot generated in METviewer interactive
 create_html: 'True'
 # input file is relative to the roc_diagram.py module
-stat_input:  ./CTC_ROC_thresh.data
-plot_filename: ./roc_diagram_actual.png
+stat_input: !ENV '${TEST_DIR}/CTC_ROC_thresh.data'
+plot_filename: !ENV '${TEST_DIR}/roc_diagram_actual.png'
 
