--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -48,6 +48,35 @@ jobs:
         # Disable shallow clones for better analysis
         fetch-depth: 0
 
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+
+    - name: Retrieve METcalcpy repository develop branch
+      run: |
+         /usr/bin/git clone https://github.com/dtcenter/METcalcpy
+         cd METcalcpy
+         /usr/bin/git checkout develop
+         python -m pip install -e .
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install pytest-cov
+
+    - name: Run Pytests
+      run: coverage run -m pytest
+
+    - name: Output coverage report
+      run: coverage report -m
+      if: always()
+
+    - name: Generate XML coverage report
+      run: coverage xml
+      if: always()
+
     - name: Get branch name
       id: get_branch_name
       run: echo branch_name=${GITHUB_REF#refs/heads/} >> $GITHUB_OUTPUT
