clone METcalcpy into different directory to prevent pytest to running its tests

--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -39,8 +39,8 @@ jobs:
         
     - name: Retrieve METcalcpy repository develop branch
       run: |
-         /usr/bin/git clone https://github.com/dtcenter/METcalcpy
-         cd METcalcpy
+         /usr/bin/git clone https://github.com/dtcenter/METcalcpy $RUNNER_WORKSPACE/METcalcpy
+         cd $RUNNER_WORKSPACE/METcalcpy
          /usr/bin/git checkout develop
          python -m pip install -e .
             
