--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -39,10 +39,11 @@ jobs:
         
     - name: Retrieve METcalcpy repository develop branch
       run: |
-         /usr/bin/git clone https://github.com/dtcenter/METcalcpy $RUNNER_WORKSPACE/METcalcpy
-         cd $RUNNER_WORKSPACE/METcalcpy
-         /usr/bin/git checkout develop
-         python -m pip install -e .
+         metcalcpy_dir="$RUNNER_WORKSPACE/METcalcpy"
+         git clone https://github.com/dtcenter/METcalcpy ${metcalcpy_dir}
+         cd ${metcalcpy_dir}
+         git -C ${metcalcpy_dir} checkout develop
+         python -m pip install -e ${metcalcpy_dir}
             
     - name: Install dependencies
       run: |
