461: update docs and sonarQube

--- a/internal/scripts/sonarqube/sonar-project.properties
+++ b/internal/scripts/sonarqube/sonar-project.properties
@@ -3,8 +3,8 @@ sonar.projectKey=METplotpy
 sonar.projectName=METplotpy
 sonar.projectVersion=SONAR_PROJECT_VERSION
 sonar.branch.name=SONAR_BRANCH_NAME
-sonar.sources=metplotpy,test
-sonar.coverage.exclusions=test/**
+sonar.sources=metplotpy
+sonar.coverage.exclusions=test/**,contributed/**
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.sourceEncoding=UTF-8
 
