find packages using wildcards so imports like metplotpy.plots.difficulty_index.mycolormaps will work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ Homepage = "https://github.com/dtcenter/METplotpy"
 version = {attr = "metplotpy.__version__"}
 dependencies = {file = ["requirements.txt"]}
 
-[tool.setuptools]
-packages = ["metplotpy"]
+[tool.setuptools.packages]
+find = {include = ["metplotpy*"]}
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
