461: hovmoeller test updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,9 @@ testpaths = ["test"]
 
 [tool.coverage.run]
 source = ["metplotpy/plots"]
+
+[tool.coverage.report]
+exclude_also = [
+    "def __repr__",
+    "if __name__ == .__main__.:",
+    ]
