--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,10 @@ testpaths = ["test"]
 
 [tool.coverage.run]
 source = ["metplotpy/plots"]
+omit = [
+    "config.py",
+    "config-3.py",
+    ]
 
 [tool.coverage.report]
 exclude_also = [
