Feature 461 make compare images configurable (#467)
* 461: scatter tests and json compare

* 461: tidy up docs and whitespace

* 461: remove accidental git add

* 461: Make CompareImages configureable by env var

* 461: fix spurious fails

* 461: fix base dir setting

* 461: add omit to coverage report

* 461: remove redundant .coveragerc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ testpaths = ["test"]
 
 [tool.coverage.run]
 source = ["metplotpy/plots"]
+omit = [
+    "config.py",
+    "config-3.py",
+    ]
+relative_files = true
 
 [tool.coverage.report]
 exclude_also = [
