--- a/test/scatter/custom_scatter.yaml
+++ b/test/scatter/custom_scatter.yaml
@@ -1,5 +1,5 @@
 ---
-plot_filename: /tmp/scatterplot.png
+plot_filename: ./scatterplot.png
 
 legend:
   x: 0.5
@@ -23,17 +23,21 @@ scatter:
     data_file:
       ./scatter1_plot_data.txt
     color: blue
-    width: 2
-    dash:
+    line_width: 2
+    type: horiz_line
+    position: 0
+    line_style:
 
   - name: Data2 Trace
     data_file:
       ./scatter2_plot_data.txt
     color: firebrick
-    width: 4
-    dash: dash
+    line_width: 4
+    type: horiz_line
+    position: 0
+    line_style:
 
-log_filename: stdout
-log_level: ERROR
+log_level: info
+log_filename: ./scatter_log.txt
 
 line_type: N/A
